--- a/idex.html
+++ b/idex.html
@@ -8,6 +8,15 @@
         <link rel="stylesheet" href="./resourcees/css/index.css" type="text/css">i
     </head>
     <body>
-        
+        <main>
+            <!-- The roles and companies <section>s are dynamically created in main.js with renderInputButtons() -->
+            <section id="resultsContainer">
+              <h3>Details:</h3>
+              <p id="salarySelected"> ... </p>
+              <p id="salaryAverageByRole"> ... </p>
+              <p id="salaryAverageByCompany"> ... </p>
+              <p id="salaryAverageIndustry"> ... </p>
+            </section>
+        </main>
     </body>
 </html>
