import workAroundModule.js to main.js and link main.js to index.html

--- a/idex.html
+++ b/idex.html
@@ -18,5 +18,6 @@
               <p id="salaryAverageIndustry"> ... </p>
             </section>
         </main>
+        <script type="modules" href="./JS/main.js" defer></script>
     </body>
 </html>
